cleanup & remove unused code
